<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.wit.hillfort.views.hillfort.HillfortView">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:fitsSystemWindows="true"
        app:elevation="0dip"
        app:layout_constraintTop_toTopOf="parent"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

    <androidx.appcompat.widget.Toolbar
          android:id="@+id/toolbarAdd"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:layout_constraintTop_toTopOf="parent"
          app:titleTextColor="@color/colorPrimary" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
          xmlns:android="http://schemas.android.com/apk/res/android"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@id/appBarLayout"
          app:layout_constraintTop_toBottomOf="@id/appBarLayout"
          android:fillViewport="true"
          android:background="@color/brown1" >

          <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="0dp"
                android:orientation="vertical">


                <EditText
                  android:id="@+id/hillfortTitle"
                  android:layout_width="match_parent"
                  android:layout_marginTop="8dp"
                  android:layout_height="47dp"
                  android:layout_marginStart="8dp"
                  android:layout_marginEnd="8dp"
                  app:layout_constraintTop_toTopOf="parent"
                  android:autofillHints=""
                  android:hint="@string/hint_hillfortTitle"
                  android:inputType="text"
                  android:maxLength="25"
                  android:maxLines="1"
                  android:padding="8dp"
                  android:textColor="@color/colorPrimaryDark"
                  android:textSize="14sp">

                  <requestFocus/>
                </EditText>


              <EditText
                  android:id="@+id/description"
                  android:layout_width="match_parent"
                  android:layout_height="47dp"
                  android:hint="@string/hint_hillfortDescription"
                  android:inputType="text"
                  android:layout_marginTop="8dp"
                  android:layout_marginStart="8dp"
                  android:layout_marginEnd="8dp"
                  android:maxLength="25"
                  android:maxLines="1"
                  android:padding="8dp"
                  android:textColor="@color/colorPrimaryDark"
                  android:textSize="14sp"
                  app:layout_constraintStart_toStartOf="@id/hillfortTitle"
                  app:layout_constraintTop_toBottomOf="@id/hillfortTitle"
                  app:layout_constraintEnd_toEndOf="@id/hillfortTitle" />


              <TextView
                  android:id="@+id/lat"
                  android:layout_width="wrap_content"
                  android:layout_height="19dp"
                  android:layout_marginTop="12dp"
                  android:layout_marginEnd="8dp"
                  android:layout_marginStart="8dp"
                  android:text="00.000000"
                  android:textAlignment="textEnd"
                  app:layout_constraintStart_toStartOf="@id/description"
                  app:layout_constraintTop_toBottomOf="@id/description" />

              <TextView
                  android:id="@+id/lng"
                  android:layout_width="wrap_content"
                  android:layout_height="19dp"
                  android:layout_marginEnd="8dp"
                  android:layout_marginStart="8dp"
                  android:text="00.000000"
                  android:textAlignment="textEnd"
                  app:layout_constraintHorizontal_bias="0.0"
                  app:layout_constraintStart_toEndOf="@id/lat"
                  app:layout_constraintTop_toTopOf="@id/lat" />

              <Switch
                  android:id="@+id/switch_assigned"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:checked="true"
                  android:text="@string/switch_assigned"
                  app:layout_constraintStart_toEndOf="@id/lng"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintBottom_toBottomOf="@id/lat"
                  app:layout_constraintTop_toTopOf="@id/lat"/>


              <CheckBox
                  android:id="@+id/switch_visited"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="12dp"
                  app:layout_constraintStart_toStartOf="@id/description"
                  app:layout_constraintTop_toBottomOf="@id/lat"
                  android:checked="true"
                  android:text="@string/switch_visited" />

              <TextView
                  android:id="@+id/lblDate"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  app:layout_constraintStart_toEndOf="@id/switch_visited"
                  app:layout_constraintBaseline_toBaselineOf="@id/switch_visited"
                  android:layout_marginStart="16dp"
                  android:visibility="gone"
                  android:textSize="14sp"
                  android:text="TextView" />

              <Button
                  android:id="@+id/chooseImage"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginStart="16dp"
                  android:layout_marginTop="15dp"
                  android:layout_marginEnd="16dp"
                  android:background="@color/blue4"
                  android:paddingTop="8dp"
                  android:paddingBottom="8dp"
                  android:text="@string/button_addImage"
                  android:textColor="@color/colorPrimary"
                  android:textSize="16sp"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toBottomOf="@+id/switch_visited" />

              <ImageView
                  android:id="@+id/hillfortImage0"
                  android:visibility="gone"
                  android:layout_width="396dp"
                  android:layout_height="110dp"
                  android:layout_marginStart="4dp"
                  android:layout_marginTop="22dp"
                  android:layout_marginEnd="5dp"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toBottomOf="@+id/chooseImage"
                  app:srcCompat="@mipmap/ic_launcher" />

              <ImageView
                  android:id="@+id/hillfortImage1"
                  android:layout_width="396dp"
                  android:layout_height="110dp"
                  android:layout_marginStart="4dp"
                  android:layout_marginTop="22dp"
                  android:layout_marginEnd="5dp"
                  android:visibility="gone"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toBottomOf="@+id/hillfortImage0"
                  app:srcCompat="@mipmap/ic_launcher" />

              <ImageView
                  android:id="@+id/hillfortImage2"
                  android:visibility="gone"
                  android:layout_width="396dp"
                  android:layout_height="110dp"
                  android:layout_marginStart="4dp"
                  android:layout_marginTop="22dp"
                  android:layout_marginEnd="5dp"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toBottomOf="@+id/hillfortImage1"
                  app:srcCompat="@mipmap/ic_launcher" />

              <ImageView
                  android:id="@+id/hillfortImage3"
                  android:layout_width="396dp"
                  android:layout_height="110dp"
                  android:layout_marginStart="4dp"
                  android:layout_marginTop="22dp"
                  android:layout_marginEnd="5dp"
                  android:visibility="gone"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toBottomOf="@+id/hillfortImage2"
                  app:srcCompat="@mipmap/ic_launcher" />

              <com.google.android.gms.maps.MapView
                  android:id="@+id/mapView"
                  android:layout_width="363dp"
                  android:layout_height="162dp"
                  android:layout_marginStart="180dp"
                  android:layout_marginTop="22dp"
                  android:layout_marginEnd="181dp"
                  android:layout_marginBottom="100dp"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toBottomOf="@+id/hillfortImage3" />

          </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>